--- a/fly.toml
+++ b/fly.toml
@@ -16,6 +16,27 @@ primary_region = 'iad'
   min_machines_running = 1
   processes = ['app']
 
+# Prevent machine from sleeping due to inactivity
+[processes]
+  app = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
+
+[[services]]
+  protocol = "tcp"
+  internal_port = 8000
+  processes = ["app"]
+  auto_stop_machines = false
+  auto_start_machines = true
+  min_machines_running = 1
+
+  [[services.ports]]
+    handlers = ["http"]
+    port = 80
+    force_https = true
+
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = 443
+
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
